# mygit

./: bubble.c
cpp_study/9_8 my_first_project/: 9_8 my_first_project.sln
cpp_study/9_8 my_first_project/9_8 my_first_project/: 9_8 my_first_project.vcxproj
cpp_study/chatgpt/: chatgpt.sln
cpp_study/chatgpt/chatgpt/: attendance_records.txt  chatgpt.vcxproj  源.cpp
cpp_study/chatgpt/chatgpt/x64/Debug/: chatgpt.exe.recipe  chatgpt.ilk  vc143.idb
cpp_study/chatgpt/chatgpt/x64/Debug/chatgpt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  chatgpt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
cpp_study/home_work_linknode/: home_work_linknode.sln
cpp_study/home_work_linknode/home_work_linknode/: home_work_linknode.vcxproj  test.c  test2.c
cpp_study/home_work_linknode/home_work_linknode/x64/Debug/: home_work_linknode.exe.recipe  home_work_linknode.ilk  vc143.idb
cpp_study/my_cmake_try/: CMakeLists.txt
cpp_study/my_cmake_try/my_cmake_try/: CMakeLists.txt  my_cmake_try.cpp  my_cmake_try.h
cpp_study/study_1_20/: study_1_20.sln
cpp_study/study_1_20/study_1_20/: study_1_20.vcxproj  源.cpp
cpp_study/study_1_20/study_1_20/x64/Debug/: study_1_20.exe.recipe  study_1_20.ilk  vc143.idb  源.obj.enc
cpp_study/员工管理系统/: 员工管理系统.sln
cpp_study/员工管理系统/员工管理系统/: Team.txt  workermanager.cpp  员工管理系统.vcxproj  员工管理系统.vcxproj.filters
cpp_study/员工管理系统/员工管理系统/x64/Debug/: vc143.idb  员工管理系统.exe.recipe  员工管理系统.ilk
cpp_study/测试/: 测试.sln
cpp_study/测试/测试/: time.txt  测试.vcxproj  源.cpp
cpp_study/测试/测试/x64/Debug/: vc143.idb  测试.exe.recipe  测试.ilk
(+29 files in other folders)
